--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+main section {
+    height: 100vh;
+    padding: 24rem 0;
+}
+
+main section article form .form-group {
+    margin: 1rem 0;
+}
